22 March 2001: [v1.0.0]
	KLfit Library ported to RedHat Linux

17 April 2001: [v1.0.1]
	Added the 'dlfitg' routine.

23 April 2001: [v1.0.2]
	Added the 'dlfit' routine.

24 April 2001: [v1.0.3]
	Makefile maintenance: specified gzip suffix.

15 November 2001: [v1.0.4]
	Fix Makefile.  Install section wasn't creating directories.

23 September 2003: [v1.0.5]
	Improved Makefile.  New install-src rule.

24 February 2006: [v1.0.6]
	add PKGNAME to Makefile. add install-all rule. ranlib lib after
	installation because of Darwin ld. no shared lib for macosx.