@@ -1,1 +1,2 @@
 - Docs
+- Use UNAME to set OS.
