@@ -19,3 +19,6 @@
 24 February 2006: [v1.0.6]
 	add PKGNAME to Makefile. add install-all rule. ranlib lib after
 	installation because of Darwin ld. no shared lib for macosx.
+22 May 2006: [v1.0.7]
+	Use HOME to set PREFIX. Unable to use UNAME to set OS, yet; added
+	to TODO. Clean up link to shared library.
